@@ -487,6 +487,10 @@ platforms.
       resources whose contents match a particular regular expression.</li>
     <li><a href="#rsel.compare">compare</a> - select resources
       based on comparison to other resources.</li>
+    <li><a href="selectors.html#readable">readable</a> -
+      Select files (resources must be files) if they are readable.</li>
+    <li><a href="selectors.html#writable">writable</a> -
+      Select files (resources must be files) if they are writable.</li>
   </ul>
 
   <h4><a name="rsel.name">name</a></h4>
