@@ -276,6 +276,14 @@ public abstract class AbstractSelectorContainer extends DataType
         appendSelector(selector);
     }
 
+    public void addReadable(ReadableSelector r) {
+        appendSelector(r);
+    }
+
+    public void addWritable(WritableSelector w) {
+        appendSelector(w);
+    }
+
     /**
      * add an arbitary selector
      * @param selector the selector to add
